--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Swing Fly</string>
+    <string name="app_name">Fly Escape</string>
+    <string name="app_id">941157017871</string>
+    <string name="facebook_app_id">413123632195789</string>
 
 </resources>
